--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-# For the Telegram bot framework
+For the Telegram bot framework
 python-telegram-bot
-# For the web server part required by Heroku
+For the web server part required by Heroku
 Flask
-# For MongoDB Atlas database connection
-# The [srv] extra is needed for mongodb+srv:// URIs
+For MongoDB Atlas database connection
+The [srv] extra is needed for mongodb+srv:// URIs
 pymongo[srv]
+Production WSGI server for Heroku
+gunicorn
+
