--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-For the Telegram bot framework
-python-telegram-bot
+For the Telegram bot framework (specific stable version)
+python-telegram-bot==21.1.1
 For the web server part required by Heroku
-Flask
+Flask==3.0.3
 For MongoDB Atlas database connection
 The [srv] extra is needed for mongodb+srv:// URIs
-pymongo[srv]
+pymongo[srv]==4.8.0
 Production WSGI server for Heroku
-gunicorn
-
+gunicorn==22.0.0
+Required by the telegram library for webhooks
+httpx==0.27.0
