--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==21.1.1
-Flask==3.0.3
+The [webhooks] extra includes everything needed for the built-in server
+python-telegram-bot[webhooks]==21.1.1
+MongoDB driver
 pymongo[srv]==4.8.0
-gunicorn==22.0.0
-httpx==0.27.0
